# SchedulerEngine

./: .appveyor.yml  .clang-format  .directory  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  InstallUtils.cmake  NOTICE  PrepareDeps.cmake  README.md  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  sonar-project.properties
Benchmarks/Taillard/: CMakeLists.txt  Taillard_Benchmark.cpp
Benchmarks/TspLib/: CMakeLists.txt  TspLib_Benchmark.cpp
Engine/: CMakeLists.txt  Engine.doxy
Engine/Algorithms/: Algorithms.doxy  CMakeLists.txt
Engine/Algorithms/RunVehicleBinders/: CMakeLists.txt  RunVehicleBinders.doxy
Engine/Algorithms/ScheduleActualization/: CMakeLists.txt  ScheduleActualizationAlgorithms.doxy
Engine/Algorithms/TSPSolvers/: CMakeLists.txt  TSPSolvers.doxy
Engine/Algorithms/TimeWindowSelectors/: CMakeLists.txt
Engine/Algorithms/VRPSolvers/: Algorithms.doxy  CMakeLists.txt  CMakeLists.txt.orig
Engine/Algorithms/Validation/: CMakeLists.txt  ValidationAlgorithms.doxy
Engine/AlgorithmsManager/: Algorithm.h  AlgorithmsManager.cpp  AlgorithmsManager.doxy  AlgorithmsManager.h  CMakeLists.txt  CostFunction.h  TSPSolver.h  VRPSolver.h
Engine/Concepts/: CMakeLists.txt  Capacity.cpp  Capacity.h  Concepts.doxy  Coordinate.cpp  Coordinate.h  Cost.cpp  Cost.h  Distance.cpp  Distance.h  Duration.cpp  Duration.h  Location.cpp  Location.h  Route.cpp  Route.h  RoutingProfile.cpp  RoutingProfile.h  Site.cpp  Site.h  Speed.cpp  Speed.h  SpeedDurationDistanceOperations.cpp  SpeedDurationDistanceOperations.h  TimePoint.cpp  TimePoint.h  TimeWindow.cpp  TimeWindow.h
Engine/Concepts/Basic/: Capacity.h  Coordinate.cpp  Coordinate.h  Cost.h  Distance.cpp  Distance.h  Duration.cpp  Duration.h  Location.h  Route.h  RoutingProfile.cpp  RoutingProfile.h  Speed.h  SpeedDurationDistanceOperations.h  TimePoint.cpp  TimePoint.h  TimeWindow.h
Engine/Concepts/Test/: ConceptStreamOperators.h  Concepts_Test_Capacity.cpp  Concepts_Test_Coordinate.cpp  Concepts_Test_Cost.cpp  Concepts_Test_Distance.cpp  Concepts_Test_Duration.cpp  Concepts_Test_Location.cpp  Concepts_Test_Route.cpp  Concepts_Test_RoutingProfile.cpp  Concepts_Test_Site.cpp  Concepts_Test_Speed.cpp  Concepts_Test_SpeedDurationDistanceOperations.cpp  Concepts_Test_TimePoint.cpp  Concepts_Test_TimeWindow.cpp  MakeLocation.h  MakeTimeWindow.h
Engine/Core/: CMakeLists.txt  Core.doxy  Engine.cpp  Engine.h
Engine/Core/Services/: RoutingService.h
Engine/CostFunctions/: CMakeLists.txt  CostFunctions.doxy
Engine/CostFunctions/TotalDistance/: CMakeLists.txt  TotalDistanceRunCostFunction.cpp  TotalDistanceRunCostFunction.h  TotalDistanceSceneCostFunction.cpp  TotalDistanceSceneCostFunction.h  TotalDistanceScheduleCostFunction.cpp  TotalDistanceScheduleCostFunction.h
Engine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineContext.h
Engine/Engine/Services/: RoutingService.h
Engine/LoggingManager/: CMakeLists.txt  CostFunctions.doxy  LoggingManager.cpp  LoggingManager.h  Renderer.h
Engine/Math/: CMakeLists.txt  FixedPointMath.h  FloatEpsilon.h  IntegerPower.h  Math.doxy
Engine/MemoryManager/: Allocator.h  BoostPoolMemoryStore.h  CMakeLists.txt  MallocAllocator.h  MallocMemoryStore.cpp  MallocMemoryStore.h  MemoryManager.cpp  MemoryManager.doxy  MemoryManager.h  MemoryStore.h  ObjectSizes.h  PoolMemoryStore.cpp  PoolMemoryStore.h
Engine/MemoryManager/Test/: CMakeLists.txt  MemoryManager_Test.cpp
Engine/PluginAPI/: APIVersion.h  Context.h  Plugin.h
Engine/PluginAPI/Services/: RoutingService.h
Engine/Routing/: CMakeLists.txt  Route.h  Routing.doxy  RoutingProfile.h  RoutingService.h
Engine/SceneEditor/: Action.h  CMakeLists.txt  Checkpoint.cpp  Checkpoint.h  Patch.cpp  Patch.h  SceneEditor.cpp  SceneEditor.doxy  SceneEditor.h
Engine/SceneEditor/Actions/: ActionsImpl.cpp  ActionsImpl.h  AllocateOrder.cpp  AllocateOrder.h  CreateRun.cpp  CreateRun.h  DestroyRun.cpp  DestroyRun.h  MoveRunWorkStop.cpp  MoveRunWorkStop.h  MoveRunWorkStopsSubsequence.cpp  MoveRunWorkStopsSubsequence.h  MoveWorkStop.cpp  MoveWorkStop.h  MoveWorkStops.cpp  MoveWorkStops.h  ReverseRunWorkStopsSubsequence.cpp  ReverseRunWorkStopsSubsequence.h  ReverseWorkStops.cpp  ReverseWorkStops.h  RotateWorkStops.cpp  RotateWorkStops.h  RotateWorkStopsSubsequence.cpp  RotateWorkStopsSubsequence.h  SwapWorkStops.h  (+8 more)
Engine/SceneManager/: Actualizable.h  ArrivalTimeActualizer.cpp  ArrivalTimeActualizer.h  Attribute.cpp  Attribute.h  CMakeLists.txt  ConceptFactory.h  ConstStopVisitor.h  Depot.cpp  Depot.h  DepotOperation.cpp  DepotOperation.h  DepotStop.cpp  DepotStop.h  DurationActualizer.cpp  DurationActualizer.h  Factory.h  ListBasedRun.cpp  ListBasedRun.h  Location.cpp  Location.h  Operation.cpp  Operation.h  Order.cpp  Order.h  Performer.cpp  Performer.h  RouteActualizer.cpp  RouteActualizer.h  Run.cpp  Run.h  RunBoundaryStop.cpp  RunBoundaryStop.h  Scene.cpp  Scene.h  SceneContext.cpp  SceneContext.h  SceneManager.cpp  SceneManager.doxy  SceneManager.h  (+32 more)
Engine/Strategies/: StrategiesManager.cpp  StrategiesManager.h  Strategy.cpp  Strategy.h  TSPSolver.h  VRPSolver.h
Engine/StrategiesManager/: CMakeLists.txt  StrategiesManager.cpp  StrategiesManager.h  Strategy.cpp  Strategy.h  TSPSolver.h  VRPSolver.h
Engine/Utils/: AutoCastRange.h  CMakeLists.txt  CallableVisitorProxy.h  DerivedTypeCaster.h  Factory.h  Optional.h  ReferenceWrapper.h  Singleton.h  Spinlock.h  String.h  Utils.doxy
Tests/: CMakeLists.txt  ConceptStreamOperators.h
Tests/Benchmarks/: CMakeLists.txt
Tests/Engine/: CMakeLists.txt
Tests/IncludeGroups/: CMakeLists.txt  sch_concepts  sch_core  sch_cost_functions  sch_crowfly_routing  sch_run_vehicle_binders  sch_scene_management  sch_schedule_actualization_algorithms  sch_strategies  sch_test  sch_test_all  sch_test_defines  sch_test_utils  sch_tsp_solvers  sch_units  sch_utils  sch_vrp_solvers
Tests/PackageManagement/: CMakeLists.txt  PMTest_Boost.cpp
Tests/Persistence/: CMakeLists.txt
Tests/Utils/: CMakeLists.txt  MakeLocation.h
Tools/TspLibFormatConverter/: CMakeLists.txt  TspLibFormatConverter.cpp
(+542 files in other folders)
