add_subdirectory(Engine)
add_subdirectory(SceneManager)
add_subdirectory(StrategiesManager)
add_subdirectory(Algorithms)
add_subdirectory(Concepts)
add_subdirectory(Utils)
add_subdirectory(Math)
add_subdirectory(CostFunctions)
add_subdirectory(MemoryManager)
add_subdirectory(SceneEditor)
add_subdirectory(LoggingManager)