add_executable(Taillard_Benchmark Taillard_Benchmark.cpp)

target_link_libraries(Taillard_Benchmark Core TaillardRoutingService TaillardSceneLoader PngRenderer)
set_target_properties(Taillard_Benchmark PROPERTIES FOLDER "Benchmarks/Taillard")
add_definitions(-DTAILLARD_BENCHMARK_DATA_ROOT="${CPP_SCHEDULER_BENCHMARK_DATA_DIRECTORY}/Data/CVRP/Taillard" -DCATCH_CONFIG_MAIN)

InstallBenchmark(Taillard_Benchmark)
